# IoT-Anomaly-Detection-Pipeline-ML-con-Clustering

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  jekyll.yml
docs/: Gemfile  _config.yml  index.md
docs/_includes/: footer_custom.html
docs/_sass/custom/: custom.scss
docs/scelte_tecniche/: architettura.md  index.md  scelte_modello.md
docs/stylesheets/: extra.css
docs/teoria/: 01_anomaly_detection_unsupervised.md  02_clustering_kmeans_gmm.md  03_feature_engineering_temporale.md  04_soglia_e_metriche.md  05_split_temporale_no_leakage.md  index.md
notebooks/: 01_eda.ipynb  02_features_pipeline.ipynb  03_clustering_threshold.ipynb  04_validation_inference.ipynb
scripts/: build_notebooks.py
src/iot_anomaly/: __init__.py  clustering.py  config.py  data.py  evaluation.py  features.py  inference.py  pipeline.py  scoring.py  wrangling.py
website/: docusaurus.config.ts  package-lock.json
website/docs/: intro.md
website/docs/scelte-tecniche/: _category_.json  architettura.md  scelte-modello.md
website/docs/teoria/: 01-anomaly-detection-unsupervised.md  02-clustering-kmeans-gmm.md  03-feature-engineering-temporale.md  04-soglia-metriche.md  05-split-temporale-no-leakage.md  _category_.json
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
