[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-anomaly"
version = "0.1.0"
description = "Pipeline ML per anomaly detection su time-series IoT industriali tramite clustering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Federico Calò", email = "fedcal01@gmail.com" }]
keywords = ["machine-learning", "anomaly-detection", "clustering", "iot", "kmeans", "gmm", "time-series", "tutorial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.6,<2.0",
    "scipy>=1.13,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "joblib>=1.4,<2.0",
    "pyyaml>=6.0,<7.0",
    "pyarrow>=15.0,<22.0",
]

[project.optional-dependencies]
notebooks = ["ipykernel>=6.29", "jupyter>=1.0", "nbformat>=5.10", "nbconvert>=7.16"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "pymdown-extensions>=10.7"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
iot-detect = "iot_anomaly.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
